--- a/src/app/headers/headers.component.html
+++ b/src/app/headers/headers.component.html
@@ -18,9 +18,9 @@
         <div [ngSwitch]="menuType" class="list">
             <ul *ngSwitchCase="'default'">
                 <li routerLink="/">Shop</li>
-                <li>Cart [{{cartCount}}]</li>
-                <li routerLink="/seller-signup">Seller</li>
-                <li routerLink="/customer-signup">Customer</li>  
+                <li routerLink="/cart">Cart [{{cartCount}}]</li>
+                <!-- <li routerLink="/seller-signup">Seller</li>
+                <li routerLink="/customer-signup">Customer</li>   -->
             </ul>
 
             <ul *ngSwitchCase="'customer'">
